[tool.poetry]
name = "battle-game"
version = "0.1.0"
description = "A turn-based fighting game"
authors = ["Derek Marion <github.magnify953@passmail.net>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
pytest = "^8.3.4"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
